# mqrust

./: .env  .gitignore  Cargo.toml  docker-compose.yml
datavis/: .dockerignore  docker-compose.yml  package-lock.json  package.json
datavis/src/: App.js  DataVisualization.css  DataVisualization.js  KafkaConsumer.js
forecasting/: forecasting.py  forecasting_model.h5  predict-stocks-using-lstm.ipynb  requirements.txt  scaler.save
front/src/: WebSocketComponent.jsx
kafka/: Dockerfile  server.properties.template  start-kafka.sh
python_server/: Dockerfile  app.py  entrypoint.sh  forecasting.py  models.py  predict-stocks-using-lstm.ipynb  requirements.txt  server.py
python_server/datavis/: package-lock.json  package.json
python_server/datavis/src/: App.js  DataVisualization.js
rust_server/: Cargo.toml  Dockerfile
rust_server/consumer/: Cargo.toml  Rocket.toml
rust_server/consumer/src/: kafka_consumer.rs  main.rs  stocks.rs
rust_server/frontend/: package-lock.json  package.json
rust_server/frontend/src/: App.js  WebSocketComponent.jsx
rust_server/src/: kafka_consumer.rs  main.rs
scraper/: Cargo.toml  Dockerfile
scraper/src/: cli.rs  errors.rs  kafka.rs  main.rs  scraper.rs  signal_handling.rs
server/: index.js  package-lock.json  package.json  pnpm-lock.yaml
src/: main.rs
