[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
chrono = "0.4.31"
env_logger = { version = "0.11.0", features = [] }
futures = "0.3.30"
log = "0.4.20"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
reqwest = { version = "0.11.23", features = ["json"] }
select = "0.6.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
