[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
rocket = { version = "0.5.0", features = ["secrets", "json", "uuid"] }
rocket_ws = "0.1.0"
tokio = { version = "1.35.1", features = ["full"] }
